fixed the css for the scrollbar in score details and fixed user answer coming back as unidentified when no attempt is made, changing it to lowercase was throwing an error and skipping the conditional for updating the page.

--- a/sec_flshcrds.css
+++ b/sec_flshcrds.css
@@ -327,22 +327,16 @@ body {
     height: 100%;
 }
 
-.custom-scrollbar {
-    --scrollbar-track-color: black;
-}
+
 
 #detailsContainer {
     width: 50%;
     height: 75%;
     overflow-y: scroll;
-    &::-webkit-scrollbar {
-        width: 5px;
-        height: 5px;
-    }
-    &::-webkit-scrollbar-track {
-        background-color: var(--scrollbar-track-color);
-    }
     white-space: pre-line;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(0, 111, 170) #000000;
+    
 }
 
 #pracTestLink {
